[package]
name = "zenoh-functionality-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-std = "1.12.0"
futures = "0.3.28"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh", features = ["unstable"] }
zenoh-result = { git = "https://github.com/eclipse-zenoh/zenoh" }
